adding random nominations for each player; adding SelectWinner component template

--- a/oscars2021/src/data/firebase.json
+++ b/oscars2021/src/data/firebase.json
@@ -1,228 +1,226 @@
 {
-  "votes" : {
-    "bianca" : {
-      "bestActor" : "Gary Oldman - Mank",
-      "bestActress" : "Andra Day - The United States v. Billie Holiday",
-      "bestAdaptedScreenplay" : "The White Tiger - Ramin Bahrani",
-      "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
-      "bestCostumeDesign" : "Emma",
-      "bestDirector" : "Chloé Zhao - Nomadland",
-      "bestMakeupAndHairstyling" : "Emma",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Sound of Metal",
-      "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
-      "bestSupportingActress" : "Olivia Colman - The Father",
-      "bestVisualEffects" : "Love and Monsters",
-      "results" : {
-        "bestActor" : "lose",
-        "bestActress" : "win",
-        "bestAdaptedScreenplay" : "pending",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "win",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "lose",
-        "bestOriginalScreenplay" : "pending",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "win",
-        "bestSupportingActress" : "pending",
-        "bestVisualEffects" : "lose"
-      }
-    },
-    "brett" : {
-      "bestActor" : "Gary Oldman - Mank",
-      "bestActress" : "Andra Day - The United States v. Billie Holiday",
-      "bestAdaptedScreenplay" : "The White Tiger - Ramin Bahrani",
-      "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
-      "bestCostumeDesign" : "Emma",
-      "bestDirector" : "Chloé Zhao - Nomadland",
-      "bestMakeupAndHairstyling" : "Emma",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Sound of Metal",
-      "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
-      "bestSupportingActress" : "Olivia Colman - The Father",
-      "bestVisualEffects" : "Love and Monsters",
-      "results" : {
-        "bestActor" : "lose",
-        "bestActress" : "win",
-        "bestAdaptedScreenplay" : "pending",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "win",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "lose",
-        "bestOriginalScreenplay" : "pending",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "win",
-        "bestSupportingActress" : "pending",
-        "bestVisualEffects" : "lose"
-      }
-    },
-    "dave" : {
-      "bestActor" : "Gary Oldman - Mank",
-      "bestActress" : "Andra Day - The United States v. Billie Holiday",
-      "bestAdaptedScreenplay" : "The White Tiger - Ramin Bahrani",
-      "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
-      "bestCostumeDesign" : "Emma",
-      "bestDirector" : "Chloé Zhao - Nomadland",
-      "bestMakeupAndHairstyling" : "Emma",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Sound of Metal",
-      "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
-      "bestSupportingActress" : "Olivia Colman - The Father",
-      "bestVisualEffects" : "Love and Monsters",
-      "results" : {
-        "bestActor" : "lose",
-        "bestActress" : "win",
-        "bestAdaptedScreenplay" : "pending",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "win",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "lose",
-        "bestOriginalScreenplay" : "pending",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "win",
-        "bestSupportingActress" : "pending",
-        "bestVisualEffects" : "lose"
-      }
-    },
-    "dominic" : {
-      "bestActor" : "Anthony Hopkins - The Father",
-      "bestActress" : "Carey Mulligan - Promising Young Woman",
-      "bestAdaptedScreenplay" : "Nomadland - Chloé Zhao",
-      "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
-      "bestCostumeDesign" : "Pinocchio",
-      "bestDirector" : "Emerald Fennell - Promising Young Woman",
-      "bestMakeupAndHairstyling" : "Hillbilly Elegy",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Nomadland",
-      "bestSupportingActor" : "Paul Raci - Sound of Metal",
-      "bestSupportingActress" : "Amanda Seyfried - Mank",
-      "bestVisualEffects" : "Tenet",
-      "results" : {
-        "bestActor" : "pending",
-        "bestActress" : "pending",
-        "bestAdaptedScreenplay" : "win",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "lose",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "pending",
-        "bestOriginalScreenplay" : "win",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "lose",
-        "bestSupportingActress" : "pending",
-        "bestVisualEffects" : "win"
-      }
-    },
-    "michael" : {
-      "bestActor" : "Gary Oldman - Mank",
-      "bestActress" : "Andra Day - The United States v. Billie Holiday",
-      "bestAdaptedScreenplay" : "The White Tiger - Ramin Bahrani",
-      "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
-      "bestCostumeDesign" : "Emma",
-      "bestDirector" : "Chloé Zhao - Nomadland",
-      "bestMakeupAndHairstyling" : "Emma",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Sound of Metal",
-      "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
-      "bestSupportingActress" : "Olivia Colman - The Father",
-      "bestVisualEffects" : "Love and Monsters",
-      "results" : {
-        "bestActor" : "lose",
-        "bestActress" : "win",
-        "bestAdaptedScreenplay" : "pending",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "win",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "lose",
-        "bestOriginalScreenplay" : "pending",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "win",
-        "bestSupportingActress" : "pending",
-        "bestVisualEffects" : "lose"
-      }
-    },
-    "norbert" : {
-      "bestActor" : "Gary Oldman - Mank",
-      "bestActress" : "Andra Day - The United States v. Billie Holiday",
-      "bestAdaptedScreenplay" : "The White Tiger - Ramin Bahrani",
-      "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
-      "bestCostumeDesign" : "Emma",
-      "bestDirector" : "Chloé Zhao - Nomadland",
-      "bestMakeupAndHairstyling" : "Emma",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Sound of Metal",
-      "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
-      "bestSupportingActress" : "Olivia Colman - The Father",
-      "bestVisualEffects" : "Love and Monsters",
-      "results" : {
-        "bestActor" : "lose",
-        "bestActress" : "win",
-        "bestAdaptedScreenplay" : "pending",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "win",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "lose",
-        "bestOriginalScreenplay" : "pending",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "win",
-        "bestSupportingActress" : "pending",
-        "bestVisualEffects" : "lose"
-      }
-    },
-    "sam" : {
-      "bestActor" : "Gary Oldman - Mank",
-      "bestActress" : "Andra Day - The United States v. Billie Holiday",
-      "bestAdaptedScreenplay" : "The White Tiger - Ramin Bahrani",
-      "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
-      "bestCostumeDesign" : "Emma",
-      "bestDirector" : "Chloé Zhao - Nomadland",
-      "bestMakeupAndHairstyling" : "Emma",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Sound of Metal",
-      "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
-      "bestSupportingActress" : "Olivia Colman - The Father",
-      "bestVisualEffects" : "Love and Monsters",
-      "results" : {
-        "bestActor" : "lose",
-        "bestActress" : "win",
-        "bestAdaptedScreenplay" : "pending",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "win",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "lose",
-        "bestOriginalScreenplay" : "pending",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "win",
-        "bestSupportingActress" : "pending",
-        "bestVisualEffects" : "lose"
-      }
-    },
-    "sissel" : {
-      "bestActor" : "Anthony Hopkins - The Father",
-      "bestActress" : "Andra Day - The United States v. Billie Holiday",
-      "bestAdaptedScreenplay" : "The White Tiger - Ramin Bahrani",
-      "bestAnimatedFeatureFilm" : "Wolfwalkers",
-      "bestCostumeDesign" : "Emma",
-      "bestDirector" : "David Fincher - Mank",
-      "bestMakeupAndHairstyling" : "Emma",
-      "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
-      "bestPicture" : "Sound of Metal",
-      "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
-      "bestSupportingActress" : "Olivia Colman - The Father",
-      "bestVisualEffects" : "Love and Monsters",
-      "results" : {
-        "bestActor" : "pending",
-        "bestActress" : "lose",
-        "bestAdaptedScreenplay" : "pending",
-        "bestAnimatedFeatureFilm" : "pending",
-        "bestCostumeDesign" : "win",
-        "bestDirector" : "pending",
-        "bestMakeupAndHairstyling" : "lose",
-        "bestOriginalScreenplay" : "pending",
-        "bestPicture" : "pending",
-        "bestSupportingActor" : "win",
-        "bestSupportingActress" : "lose",
-        "bestVisualEffects" : "pending"
-      }
+  "bianca" : {
+    "bestActor" : "Riz Ahmed - Sound of Metal",
+    "bestActress" : "Frances McDormand - Nomadland",
+    "bestAdaptedScreenplay" : "One Night in Miami - Kemp Powers",
+    "bestAnimatedFeatureFilm" : "Onward",
+    "bestCostumeDesign" : "Mulan",
+    "bestDirector" : "Lee Isaac Chung - Minari",
+    "bestMakeupAndHairstyling" : "Mank, Kimberley Spiteri",
+    "bestOriginalScreenplay" : "Sound of Metal - Abraham Marder, Darius Marder, Derek Cianfrance",
+    "bestPicture" : "Promising Young Woman",
+    "bestSupportingActor" : "Daniel Kaluuya - Judas and the Black Messiah",
+    "bestSupportingActress" : "Youn Yuh-jung - Minari",
+    "bestVisualEffects" : "Mulan",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
+    }
+  },
+  "brett" : {
+    "bestActor" : "Chadwick Boseman - Ma Rainey’s Black Bottom",
+    "bestActress" : "Frances McDormand - Nomadland",
+    "bestAdaptedScreenplay" : "One Night in Miami - Kemp Powers",
+    "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
+    "bestCostumeDesign" : "Ma Rainey’s Black Bottom",
+    "bestDirector" : "Emerald Fennell - Promising Young Woman",
+    "bestMakeupAndHairstyling" : "Hillbilly Elegy",
+    "bestOriginalScreenplay" : "The Trial of the Chicago 7 - Aaron Sorkin",
+    "bestPicture" : "Mank",
+    "bestSupportingActor" : "Paul Raci - Sound of Metal",
+    "bestSupportingActress" : "Olivia Colman - The Father",
+    "bestVisualEffects" : "The One and Only Ivan",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
+    }
+  },
+  "dave" : {
+    "bestActor" : "Riz Ahmed - Sound of Metal",
+    "bestActress" : "Frances McDormand - Nomadland",
+    "bestAdaptedScreenplay" : "Nomadland - Chloé Zhao",
+    "bestAnimatedFeatureFilm" : "Soul",
+    "bestCostumeDesign" : "Ma Rainey’s Black Bottom",
+    "bestDirector" : "David Fincher - Mank",
+    "bestMakeupAndHairstyling" : "Hillbilly Elegy",
+    "bestOriginalScreenplay" : "Promising Young Woman - Emerald Fennell",
+    "bestPicture" : "The Trial of the Chicago 7",
+    "bestSupportingActor" : "Paul Raci - Sound of Metal",
+    "bestSupportingActress" : "Amanda Seyfried - Mank",
+    "bestVisualEffects" : "The One and Only Ivan",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
+    }
+  },
+  "dominic" : {
+    "bestActor" : "Anthony Hopkins - The Father",
+    "bestActress" : "Carey Mulligan - Promising Young Woman",
+    "bestAdaptedScreenplay" : "Nomadland - Chloé Zhao",
+    "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
+    "bestCostumeDesign" : "Pinocchio",
+    "bestDirector" : "Emerald Fennell - Promising Young Woman",
+    "bestMakeupAndHairstyling" : "Hillbilly Elegy",
+    "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
+    "bestPicture" : "Sound of Metal",
+    "bestSupportingActor" : "Paul Raci - Sound of Metal",
+    "bestSupportingActress" : "Amanda Seyfried - Mank",
+    "bestVisualEffects" : "Tenet",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
+    }
+  },
+  "michael" : {
+    "bestActor" : "Steven Yeun - Minari",
+    "bestActress" : "Frances McDormand - Nomadland",
+    "bestAdaptedScreenplay" : "One Night in Miami - Kemp Powers",
+    "bestAnimatedFeatureFilm" : "Wolfwalkers",
+    "bestCostumeDesign" : "Mank",
+    "bestDirector" : "Emerald Fennell - Promising Young Woman",
+    "bestMakeupAndHairstyling" : "Ma Rainey’s Black Bottom",
+    "bestOriginalScreenplay" : "Minari - Lee Isaac Chung",
+    "bestPicture" : "Promising Young Woman",
+    "bestSupportingActor" : "Sacha Baron Cohen - The Trial of the Chicago 7",
+    "bestSupportingActress" : "Glenn Close - Hillbilly Elegy",
+    "bestVisualEffects" : "Mulan",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
+    }
+  },
+  "norbert" : {
+    "bestActor" : "Chadwick Boseman - Ma Rainey’s Black Bottom",
+    "bestActress" : "Carey Mulligan - Promising Young Woman",
+    "bestAdaptedScreenplay" : "Nomadland - Chloé Zhao",
+    "bestAnimatedFeatureFilm" : "Onward",
+    "bestCostumeDesign" : "Mank",
+    "bestDirector" : "David Fincher - Mank",
+    "bestMakeupAndHairstyling" : "Mank, Kimberley Spiteri",
+    "bestOriginalScreenplay" : "The Trial of the Chicago 7 - Aaron Sorkin",
+    "bestPicture" : "Sound of Metal",
+    "bestSupportingActor" : "Paul Raci - Sound of Metal",
+    "bestSupportingActress" : "Maria Bakalova - Borat Subsequent Moviefilm",
+    "bestVisualEffects" : "The Midnight Sky",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
+    }
+  },
+  "sam" : {
+    "bestActor" : "Anthony Hopkins - The Father",
+    "bestActress" : "Andra Day - The United States v. Billie Holiday",
+    "bestAdaptedScreenplay" : "Borat Subsequent Moviefilm - Peter Baynham, Sacha Baron Cohen, Jena Friedman, Anthony Hines, Lee Kern, Dan Mazer, Nina Pedrad, Erica Rivinoja, Dan Swimer",
+    "bestAnimatedFeatureFilm" : "Over the Moon",
+    "bestCostumeDesign" : "Mank",
+    "bestDirector" : "Emerald Fennell - Promising Young Woman",
+    "bestMakeupAndHairstyling" : "Hillbilly Elegy",
+    "bestOriginalScreenplay" : "Sound of Metal - Abraham Marder, Darius Marder, Derek Cianfrance",
+    "bestPicture" : "Mank",
+    "bestSupportingActor" : "Paul Raci - Sound of Metal",
+    "bestSupportingActress" : "Glenn Close - Hillbilly Elegy",
+    "bestVisualEffects" : "The One and Only Ivan",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
+    }
+  },
+  "sissel" : {
+    "bestActor" : "Riz Ahmed - Sound of Metal",
+    "bestActress" : "Frances McDormand - Nomadland",
+    "bestAdaptedScreenplay" : "Borat Subsequent Moviefilm - Peter Baynham, Sacha Baron Cohen, Jena Friedman, Anthony Hines, Lee Kern, Dan Mazer, Nina Pedrad, Erica Rivinoja, Dan Swimer",
+    "bestAnimatedFeatureFilm" : "Shaun the Sheep Movie: Farmageddon",
+    "bestCostumeDesign" : "Mank",
+    "bestDirector" : "Chloé Zhao - Nomadland",
+    "bestMakeupAndHairstyling" : "Hillbilly Elegy",
+    "bestOriginalScreenplay" : "Sound of Metal - Abraham Marder, Darius Marder, Derek Cianfrance",
+    "bestPicture" : "Nomadland",
+    "bestSupportingActor" : "Daniel Kaluuya - Judas and the Black Messiah",
+    "bestSupportingActress" : "Youn Yuh-jung - Minari",
+    "bestVisualEffects" : "Mulan",
+    "results" : {
+      "bestActor" : "pending",
+      "bestActress" : "pending",
+      "bestAdaptedScreenplay" : "pending",
+      "bestAnimatedFeatureFilm" : "pending",
+      "bestCostumeDesign" : "pending",
+      "bestDirector" : "pending",
+      "bestMakeupAndHairstyling" : "pending",
+      "bestOriginalScreenplay" : "pending",
+      "bestPicture" : "pending",
+      "bestSupportingActor" : "pending",
+      "bestSupportingActress" : "pending",
+      "bestVisualEffects" : "pending"
     }
   }
 }
