--- a/three-js/package.json
+++ b/three-js/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "vite": "^5.2.12"
+  },
+  "dependencies": {
+    "three": "^0.165.0"
   }
 }
